--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   background-color: #393E46;
 }
 
-h1 {
+h2 {
   margin: 30px;
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
@@ -27,8 +27,17 @@ p {
   color: #4ECCA3;
   font-family: 'Indie Flower', cursive;
 }
+#Clickable-img{
+  display: block;
+  margin: 4.6rem auto;
+  width: 11%;
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s;
 
-img {
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+img{
   width: 80%;
 }
 
@@ -38,4 +47,21 @@ footer {
   text-align: center;
   font-family: 'Indie Flower', cursive;
 
+}
+
+
+
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
